--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,19 +3,9 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <h1>Home</h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Accusamus, aliquam, atque, autem blanditiis consequuntur corporis
-        cumque debitis dolorem doloremque dolorum eaque eius enim error
-        exercitationem fugiat harum illo impedit in inventore ipsa ipsum
-        itaque iure laboriosam libero magni maxime molestiae nam natus
-        necessitatibus nemo neque nihil nisi nostrum nulla obcaecati
-        officia omnis optio pariatur perferendis perspiciatis placeat
-        porro quaerat quam quas quia quibusdam quidem quis quod ratione
-        recusandae repellendus reprehenderit repudiandae rerum saepe
-        sapiente sequi similique sint soluta sunt tempora tenetur
-        temporibus, totam ullam unde velit vero voluptatem voluptates
-        voluptatibus.
-    </p>
+    <h1>Upload An Image</h1>
+    <form method="POST" enctype="multipart/form-data">
+        <input type="file" name="file">
+        <input type="submit" value="Upload">
+    </form>
 {% endblock %}
